Updated NetisHR v2 files (mainly menu)

--- a/netishr/administrator_system_sites.html
+++ b/netishr/administrator_system_sites.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>NetisHR</title>
+    <title>NetisHR | Site Management</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -374,13 +374,16 @@
                 <div class="col-lg-12">
                     <div class="row wrapper border-bottom white-bg page-heading">
                         <div class="col-lg-10">
-                            <h2>Settings</h2>
+                            <h2>Site Management</h2>
                             <ol class="breadcrumb">
                                 <li>
                                     <a href="index.html">Home</a>
                                 </li>
+                                <li>
+                                    <a href="administrator.html">Administrator</a>
+                                </li>
                                 <li class="active">
-                                    <strong>Settings</strong>
+                                    <strong>System Management</strong>
                                 </li>
                             </ol>
                         </div>
@@ -394,149 +397,54 @@
                             <div class="col-lg-4">
                                 <div class="ibox float-e-margins">
                                     <div class="ibox-title">
-                                        <h5>General</h5>
+                                        <h5>Sites</h5>
                                     </div>
                                     <div class="ibox-content">
-                                        <div><a href="administrator_general_settings.html">Settings</a>
-                                            <div class="small">Various settings for Performance</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="corporate_calendar.html">Corporate Annual Calendar</a>
-                                            <div class="small">Calendar of corporate events</div>
-                                        </div>
-                                        <p></p>
-                                        <div>Users/Roles Management
-                                            <div class="small">Manage roles and system users</div>
+                                        <div>Sites List
                                         </div>
                                     </div>
                                 </div>
                                 <div class="ibox float-e-margins">
                                     <div class="ibox-title">
-                                        <h5>Organisation</h5>
-                                        <div class="ibox-tools">
-                                            <!--<span class="label label-warning-light pull-right">10 Messages</span>-->
-                                        </div>
+                                        <h5>Domain Mappings</h5>
                                     </div>
                                     <div class="ibox-content">
-                                        <p></p>
-                                        <div><a href="administrator_groups.html">Groups</a>
-                                            <div class="small">Set up companies and branches</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="#">Upload Job Titles</a>
-                                            <div class="small">Upload Job Titles</div>
+                                        <div>TBD
                                         </div>
                                     </div>
                                 </div>
                                 <div class="ibox float-e-margins">
                                     <div class="ibox-title">
-                                        <h5>Job</h5>
+                                        <h5>Menu Management</h5>
                                         <div class="ibox-tools">
                                         </div>
                                     </div>
                                     <div class="ibox-content">
-                                        <div><a href="administrator_job_settings.html">Settings</a>
-                                            <div class="small">Various settings for Performance</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5>Person</h5>
-                                        <div class="ibox-tools">
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        Upload Persons
-                                    </div>
-                                </div>
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5>Recruitment</h5>
-                                        <div class="ibox-tools">
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        Upload Applicants
-                                    </div>
-                                </div>
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5>Performance</h5>
-                                        <div class="ibox-tools">
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <div><a href="performance_mgmt_periods.html">Performance Management Periods</a>
-                                            <div class="small">Manage performance management periods</div>
-                                        </div>
 
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5>Training</h5>
-                                        <div class="ibox-tools">
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        Category
-                                        <br> Institution
-                                        <br> Instructor
-                                    </div>
-                                </div>
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5>Career</h5>
-                                        <div class="ibox-tools">
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <div><a href="administrator_career_settings.html">Settings</a>
-                                            <div class="small">Various settings for Performance</div>
-                                        </div>
-                                        Policy Setting
-                                    </div>
-                                </div>
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5>Renumeration</h5>
-                                        <div class="ibox-tools">
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <div><a href="administrator_remuneration_settings.html">Settings</a>
-                                            <div class="small">Various settings for Performance</div>
-                                        </div>
-                                        Personnel Administration
-                                        <br> Payroll
-                                    </div>
-
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5>System Management</h5>
-                                        <div class="ibox-tools">
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <div><a href="administrator_system_settings.html">System Settings</a>
-                                            <div class="small">Various system settings</div>
+                                        <div><a href="administrator_general_settings.html">Menu Design</a>
+                                            <div class="small">TBD</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="administrator_system_sites.html">Site Management</a>
-                                            <div class="small">Managing sites on this system</div>
+                                        <div><a href="administrator_general_settings.html">Site Menu Assignment</a>
+                                            <div class="small">TBD</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="administrator_general_settings.html">Role Menu Assignment</a>
+                                            <div class="small">TBD</div>
+                                        </div>
+                                        <p></p>
+                                    </div>
+                                </div>
+                                <div class="ibox float-e-margins">
+                                    <div class="ibox-title">
+                                        <h5>License Management</h5>
+                                        <div class="ibox-tools">
                                         </div>
                                     </div>
-
+                                    <div class="ibox-content">
+                                        <div>TBD</div>
+                                    </div>
                                 </div>
-
                             </div>
                         </div>
                     </div>
