--- a/netishr/job_levels.html
+++ b/netishr/job_levels.html
@@ -19,6 +19,10 @@
 
     <link href="css/plugins/datapicker/datepicker3.css" rel="stylesheet">
 
+    <link href="css/plugins/ionRangeSlider/ion.rangeSlider.css" rel="stylesheet">
+    <link href="css/plugins/ionRangeSlider/ion.rangeSlider.skinFlat.css" rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -450,6 +454,45 @@
                                                 <div class="ibox">
                                                     <div class="ibox-content">
 
+                                                        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjoblevel">New Job Level</button>
+                                                        <div class="modal" id="newjoblevel">
+                                                            <div class="modal-dialog">
+                                                                <div class="modal-content animated">
+                                                                    <div class="modal-header">
+                                                                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                                        <i class="fa fa-laptop modal-icon"></i>
+                                                                        <h4 class="modal-title">New Job Level</h4>
+                                                                        <small class="font-bold">Please enter new job level.</small>
+                                                                    </div>
+                                                                    <div class="modal-body">
+                                                                        <div class="form-group">
+                                                                            <label class="col-sm-2 control-label">Label: </label>
+                                                                            <div class="col-sm-10">
+                                                                                <input type="text" class="form-control">
+                                                                            </div>
+                                                                            <label class="col-sm-2 control-label">Code: </label>
+                                                                            <div class="col-sm-10">
+                                                                                <input type="text" class="form-control">
+                                                                            </div>
+                                                                            <label class="col-sm-2 control-label">Description: </label>
+                                                                            <div class="col-sm-10">
+                                                                                <input type="text" class="form-control">
+                                                                            </div>
+                                                                            <label class="col-sm-2 control-label">Grade range: </label>
+                                                                            <div class="col-sm-3">
+                                                                                <div id="ionrange_1"></div>
+                                                                            </div>
+                                                                        </div>
+
+                                                                    </div>
+                                                                    <div class="modal-footer">
+                                                                        <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
                                                         <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
                                                             <thead>
                                                                 <tr>
@@ -461,7 +504,10 @@
                                                                     <th data-hide="all">Grade range</th>
                                                                     <th data-hide="all">Last update</th>
                                                                     <th data-hide="phone">Status</th>
-                                                                    <th class="text-right">Action</th>
+                                                                    <th class="text-right">
+
+
+                                                                    </th>
 
                                                                 </tr>
                                                             </thead>
@@ -671,6 +717,59 @@
                                                     <div class="ibox-content">
 
                                                         <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
+
+                                                            <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjobsublevel">New Job Sub-level</button>
+                                                            <div class="modal" id="newjobsublevel">
+                                                                <div class="modal-dialog">
+                                                                    <div class="modal-content animated">
+                                                                        <div class="modal-header">
+                                                                            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                                            <i class="fa fa-laptop modal-icon"></i>
+                                                                            <h4 class="modal-title">New Job Sub-level</h4>
+                                                                            <small class="font-bold">Please enter new job sub-level.</small>
+                                                                        </div>
+                                                                        <div class="modal-body">
+                                                                            <div class="form-group">
+                                                                                <label class="col-sm-2 control-label">Label: </label>
+                                                                                <div class="col-sm-10">
+                                                                                    <input type="text" class="form-control">
+                                                                                </div>
+                                                                                <label class="col-sm-2 control-label">Code: </label>
+                                                                                <div class="col-sm-10">
+                                                                                    <input type="text" class="form-control">
+                                                                                </div>
+                                                                                <label class="col-sm-2 control-label">Description: </label>
+                                                                                <div class="col-sm-10">
+                                                                                    <input type="text" class="form-control">
+                                                                                </div>
+                                                                                <label class="col-sm-2 control-label">Job Level: </label>
+                                                                                <div>
+                                                                                    <select data-placeholder="Choose a period..." class="chosen-select" tabindex="2">
+                                                                                        <option value="1">Executive</option>
+                                                                                        <option selected value="2">Directorate</option>
+                                                                                        <option value="3">Division</option>
+                                                                                    </select>
+                                                                                </div>
+                                                                                <label class="col-sm-2 control-label">Parent Sub-level: </label>
+                                                                                <div>
+                                                                                    <select data-placeholder="Choose a period..." class="chosen-select" tabindex="2">
+                                                                                        <option value="1">DIR-BR Director of Business Development</option>
+                                                                                        <option selected value="2">DIR-FIN Director of Finance</option>
+                                                                                        <option value="3">DIR-HR Director of HR</option>
+                                                                                    </select>
+                                                                                </div>
+                                                                            </div>
+
+                                                                        </div>
+                                                                        <div class="modal-footer">
+                                                                            <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                                                            <button type="button" class="btn btn-primary">Save changes</button>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+
+
                                                             <thead>
                                                                 <tr>
 
@@ -860,6 +959,10 @@
     <script src="js/plugins/footable/footable.all.min.js"></script>
 
     <!-- Page-Level Scripts -->
+
+    <!-- IonRangeSlider -->
+    <script src="js/plugins/ionRangeSlider/ion.rangeSlider.min.js"></script>
+
     <script>
         $(document).ready(function () {
 
@@ -881,6 +984,25 @@
                 autoclose: true
             });
 
+        });
+        $("#ionrange_1").ionRangeSlider({
+            // Set grade range there
+            min: 0,
+            max: 18,
+            type: 'double',
+            prefix: "",
+            maxPostfix: "",
+            prettify: false,
+            hasGrid: true
+        });
+        $("#ionrange_2").ionRangeSlider({
+            min: 0,
+            max: 18,
+            type: 'single',
+            step: 1,
+            postfix: "",
+            prettify: false,
+            hasGrid: true
         });
     </script>
 
