--- a/netishr/organisation_diagrams.html
+++ b/netishr/organisation_diagrams.html
@@ -376,20 +376,21 @@
                     <div class="col-lg-6">
                         <div class="tabs-container">
                             <ul class="nav nav-tabs">
-                                <li class="active"><a data-toggle="tab" href="#tab-1"> Organisation units</a></li>
+                                <li class="active"><a data-toggle="tab" href="#tab-1">Groups and Units</a></li>
                                 <li class=""><a data-toggle="tab" href="#tab-2">Job Titles/Persons</a></li>
                             </ul>
                             <div class="tab-content">
                                 <div id="tab-1" class="tab-pane active">
                                     <div class="panel-body">
-                                        <strong>Chart showing organization units</strong>
+                                        <strong>Chart showing groups and units</strong>
 
                                         <p>(Chart showing the company, parent/child companies, branches, departments as well as groups within the company)</p>
+                                        <!-- Perhaps use https://codepen.io/siiron/pen/aLkdE ? -->
                                     </div>
                                 </div>
                                 <div id="tab-2" class="tab-pane">
                                     <div class="panel-body">
-                                        <strong>Chart showing Job Titles/Persons</strong>
+                                        <strong>Chart showing Job Titles and Persons</strong>
 
                                         <p>(Chart showing job titles and persons. Gives a switch to show without or with persons)</p>
                                     </div>
