--- a/netishr/competency_dictionary_new.html
+++ b/netishr/competency_dictionary_new.html
@@ -638,39 +638,38 @@
 
                                                 <div class="hr-line-dashed"></div>
                                                 <div class="ibox-tools">
-                                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">New indicator</button>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newindicator">New indicator</button>
+<div class="modal inmodal" id="newindicator" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content animated bounceInRight">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <i class="fa fa-laptop modal-icon"></i>
+                <h4 class="modal-title">New indicator</h4>
+                <small class="font-bold">Please enter new indicator.</small>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Order: </label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Description: </label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
 
-                                                    <div class="modal inmodal" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
-                                                        <div class="modal-dialog">
-                                                            <div class="modal-content animated bounceInRight">
-                                                                <div class="modal-header">
-                                                                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                                                    <i class="fa fa-laptop modal-icon"></i>
-                                                                    <h4 class="modal-title">New indicator</h4>
-                                                                    <small class="font-bold">Please enter new indicator.</small>
-                                                                </div>
-                                                                <div class="modal-body">
-                                                                    <div class="form-group">
-                                                                        <label class="col-sm-2 control-label">Order: </label>
-                                                                        <div class="col-sm-10">
-                                                                            <input type="text" class="form-control">
-                                                                        </div>
-                                                                    </div>
-                                                                    <div class="form-group">
-                                                                        <label class="col-sm-2 control-label">Description: </label>
-                                                                        <div class="col-sm-10">
-                                                                            <input type="text" class="form-control">
-                                                                        </div>
-                                                                    </div>
-
-                                                                </div>
-                                                                <div class="modal-footer">
-                                                                    <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
-                                                                    <button type="button" class="btn btn-primary">Save changes</button>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
                                                 </div>
@@ -711,40 +710,38 @@
 
                                                 <div class="hr-line-dashed"></div>
                                                 <div class="ibox-tools">
-                                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">New indicator</button>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">New indicator</button>
+<div class="modal inmodal" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content animated bounceInRight">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <i class="fa fa-laptop modal-icon"></i>
+                <h4 class="modal-title">New indicator</h4>
+                <small class="font-bold">Please enter new indicator.</small>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Order: </label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Description: </label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
 
-                                                    <div class="modal inmodal" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
-                                                        <div class="modal-dialog">
-                                                            <div class="modal-content animated bounceInRight">
-                                                                <div class="modal-header">
-                                                                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                                                    <i class="fa fa-laptop modal-icon"></i>
-                                                                    <h4 class="modal-title">New indicator</h4>
-                                                                    <small class="font-bold">Please enter new indicator.</small>
-                                                                </div>
-                                                                <div class="modal-body">
-                                                                    <div class="form-group">
-                                                                        <label class="col-sm-2 control-label">Order: </label>
-                                                                        <div class="col-sm-10">
-                                                                            <input type="text" class="form-control">
-                                                                        </div>
-                                                                    </div>
-                                                                    <div class="form-group">
-                                                                        <label class="col-sm-2 control-label">Description: </label>
-                                                                        <div class="col-sm-10">
-                                                                            <input type="text" class="form-control">
-                                                                        </div>
-                                                                    </div>
-
-                                                                </div>
-                                                                <div class="modal-footer">
-                                                                    <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
-                                                                    <button type="button" class="btn btn-primary">Save changes</button>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
 
                                                 </div>
                                                 <table class="table">
